# ai-automation-agency

./: .cursorrules  .env  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  30th_strategy_to_implement_next.md  AI Real Estate Appraisal Tool.html  CONTRIBUTING.md  Claude.md  DEPLOYMENT.md  DEPLOY_LOG.md  Dockerfile  Dockerfile.backend  LLM_CONTEXT.md  MASTER_EXECUTION_GUIDE.md  Makefile  Procfile  RAILWAY_DEPLOY.md  README.md  STATUS.md  agency_outreach.py  ai_pitch_generator.py  api.py  config.py  debug_db.py  debug_twilio.py  demo_live.py  demo_quick.py  docker-compose.yml  generate-config.js  interactive_demo_relay.py  landing_page_plan.md  lead_manager.py  lead_manager_extensions.py  market_scraper.py  market_service.py  package.json  partner_demo_suite.py  populate_demo_data.py  (+17 more)
.agent/rules/: testing_policy.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
.models/v_20251230_112948_160783/: metadata.json  model.ubj
api/: index.py
application/services/: appointment_service.py  appraisal.py  email_parser.py  investment_calculator.py  journey_manager.py  lead_ingestion_service.py  lead_processor.py  lead_scorer.py  lead_scoring_service.py  local_property_search.py  market_intelligence.py  message_builder.py  payment_service.py  routing_service.py  scoring.py
application/workflows/: agents.py  lead_processing_graph.py  qualification_graph.py
appraisal-tool/: README.md  agenzia-ai.code-workspace  index.html  script.js  styles.css  test_interface.html  test_language_switching.html
appraisal-tool/src/: App.css
apps/dashboard/: .env.example  .env.production  .env.staging  Dockerfile  eslint.config.js  package-lock.json  package.json  vercel.json  vite.config.js
apps/fifi/: README.md  agenzia-ai.code-workspace  index.html  package-lock.json  package.json  script.js  vite.config.js
apps/landing-page/: .gitignore  VERCEL_DEPLOY.md  auth-helper.js  build.js  forgot-password.html  index.html  login.html  nginx.conf  package-lock.json  package.json  pricing.html  register.html  reset-password.html  (+4 more)
best_practices/: __init__.py  capture.py  retriever.py
config/: __init__.py  container.py  settings.py
dashboard/: .env  .env.example  package-lock.json  package.json  setup_dashboard_env.py  vite.config.js
docs/: APPRAISAL_DEMO.md  DATA_COLLECTION_EXPANSION.md  DEPLOYMENT_CHECKLIST.md  MONITORING.md  MONITORING_DASHBOARD.md  PARTNER_PITCH_DEMO.md  PERFORMANCE_OPTIMIZATION.md  PHASE3_SETUP.md  PORTAL_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STANDARDS.md  QUICK_DEPLOY.md  README.md  SALES_MARKETING_INDEX.md  add-postcode-migration.sql  adr-002-hybrid-search.sql  adr-019-semantic-cache.sql  adr-027-sales-journey.sql  adr_audit_report.md  adr_compliance_review.md  api-security.md  appraisal-tool-architecture.md  business-roi-report.md  campaign-guide.md  customer-flow.md  dashboard-specification.md  database-upgrade.md  database_standards.md  doc_manifest.json  fix_supabase_permissions.md  landing-page-architecture.md  outreach_milano_v1.csv  portal-integration.md  production_data_gathering.md  property-import.md  reference_environment_variables.md  roadmap.md  roadmap_plane.md  sales-journey-blueprint.md  terminal_demo_guide.md  (+4 more)
domain/: appraisal.py  enums.py  errors.py  handoff.py  lead_sources.py  messages.py  models.py  ports.py  qualification.py
infrastructure/: ai_pdf_generator.py  ai_pitch_generator.py  logging.py  market_scraper.py  market_service.py  rate_limiter.py
landing_page/: index.html  package-lock.json  script.js  styles.css
mobile/: .env  .env.example  App.js  App_minimal.js  app.json  package-lock.json  package.json
models/: fifi_xgboost_v1.json  fifi_xgboost_v1_metadata.json
scripts/: agency_outreach.py  analytics.py  analyze_properties.py  apply_appraisal_validations_migration.py  apply_fifi_migration.py  apply_migration.py  backtest_avm.py  build.sh  check_appraisal_logs.py  check_db.py  check_deployment.py  check_fifi_tables.py  check_leads.py  check_migration.py  check_supabase_data.py  confirm_admin_email.py  create_admin_user.py  debug_db.py  debug_everything.py  debug_market_discovery.py  demo_live.py  demo_quick.py  e2e_full_lifecycle_simulation.py  export_leads.py  export_scraped_data.py  follow_up.py  gather_production_data.py  generate-config.js  generate-config.sh  generate_mock_transactions.py  generate_property_embeddings.py  generate_property_pdf.py  import_from_url.py  ingest_market_data.py  lint-ci.sh  live_demo.py  migrate_v2_data.py  poll_emails.py  populate_demo_data.py  pre_flight_check.py  (+26 more)
sql/: add-metadata-to-leads.sql  gold-standard-migration.sql  market-data-migration.sql  split-data-migration.sql  standards-alignment-migration.sql
test_scripts/: check_langchain_adapter.py  check_langgraph.py  check_leads.py  check_recent_messages.py  check_today_messages.py  simulate_incoming.py  test_appointment_lifecycle.py  test_cache_connection.py  test_calcom_integration.py  test_fifi_avm_protocol.py  test_rate_limit.py  test_redis_cache.py  test_sentry_integration.py  test_voice_webhook.sh  verify_all_features.py  verify_blueprint.py  verify_clever_ai.py  verify_conversation_flow.py  verify_extraction.py  verify_messages.py  verify_migration.py  verify_phase_3.py  verify_phase_4.py  verify_real_appraisal.py  verify_sales_journey.py
tests/: conftest.py  test_api.py  test_dashboard_features.py  test_e2e_full_journey.py  test_lead_logic.py  test_lead_manager.py  test_tools.py
tutorial/: faq_en.md  faq_it.md  legal_privacy_en.md  legal_privacy_it.md  mobile_guide_en.md  mobile_guide_it.md  onboarding_en.md  onboarding_it.md  personality_guide_en.md  personality_guide_it.md  strategy_en.md  strategy_it.md  training_guide_en.md  training_guide_it.md  troubleshooting_en.md  troubleshooting_it.md  user_guide_en.md  user_guide_it.md
(+341 files in other folders)
