[project]
name = "agenzia-ai"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "supabase",
    "mistralai",
    "twilio",
    "python-multipart",
    "thefuzz",
    "requests",
    "python-dotenv",
    "tenacity",
    "fpdf2",
    "google-auth",
    "langchain-core",
    "langchain-mistralai",
    "langgraph",
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "matplotlib",
    "seaborn"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "PLR2004", "PLC0415"]  # Allow long lines, magic numbers, imports in functions for tests
"upload_data.py" = ["E501", "E701", "PLR1722"]  # Legacy script - allow long lines and inline statements
"**/test_*.py" = ["E501", "PLR2004"]  # Allow long lines and magic numbers in test files
"scripts/**" = ["E501", "PLR2004", "PLC0415", "E722", "F841", "E402"]
"test_scripts/**" = ["E501", "PLR2004", "PLC0415", "E402", "F841"]
"simulate_reply.py" = ["PLR2004"]
"demo_*.py" = ["E501", "PLR2004"]
"partner_demo_suite.py" = ["E501"]
"populate_demo_data.py" = ["E501"]
"infrastructure/**" = ["E501", "PLR0915", "PLC0415", "PLR2004", "E722", "UP038"]
"presentation/api/api.py" = ["N803", "PLC0415"]  # Allow lazy imports
"domain/appraisal.py" = ["PLC0415"]  # Allow lazy re import to avoid circular dependency
"application/**" = ["E501", "E402", "PLR0913", "PLR0915", "PLC0415", "PLR1714", "PLR2004"]
"archive/**" = ["E402", "PLC0415"]
"best_practices/__init__.py" = ["E501"]
"scenario_negotiation.py" = ["PLR2004", "E501"]
"agency_outreach.py" = ["E501", "F841", "PLC0415"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*", "archive.*", "best_practices.*", "test_scripts.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
# Exclude archived and script tests that have outdated imports
norecursedirs = ["archive", "test_scripts", "scripts", ".git", ".venv", "venv", "node_modules"]
